gobmkida/g2/safety_to_string
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/safety_to_string/src/engine/printutils.c:818:26: error: use of undeclared identifier 'unk_4966C1'
result = ( const char *)&unk_4966C1; 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/safety_to_string/src/engine/printutils.c:824:26: error: use of undeclared identifier 'unk_4966DF'
result = ( const char *)&unk_4966DF; 
                         ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/safety_to_string/src/obj/1/printutils.o] Error 1
